# immutable-cow

./: CMakeLists.txt  README.md
include/cow/: path.h  ptr.h  spot.h
include/cow/detail/: control_block.h  path.h  ptr.h  spot.h
src/: cow.cpp
test/: path_test.cpp  ptr_test.cpp  test.cpp
